samples/_failures_safe/1761543810_edec9c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e6a62af.c: In function ‘load_log_file’:
./samples/SAFE/__tmp_9e6a62af.c:127:5: error: expected declaration or statement at end of input
  127 |     if (!analyzer || !filename) return 0;
      |     ^~
